# ConcordLM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  dpo.yaml  rlhf.yaml  sft.yaml
scripts/: build_dataset.py  evaluate.py  generate.py  train_dpo.py  train_rlhf.py  train_sft.py
src/concordlm/: __init__.py  config.py
src/concordlm/data/: __init__.py  preference_dataset.py  sft_dataset.py  utils.py
src/concordlm/eval/: __init__.py  benchmark.py  quality.py  safety.py
src/concordlm/inference/: __init__.py  generate.py
src/concordlm/models/: __init__.py  loader.py  reward_model.py
src/concordlm/trainers/: __init__.py  dpo.py  rlhf.py  sft.py
tests/: test_config.py  test_data.py  test_models.py
web/: __init__.py  app.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js
